--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to test the api from pokeapi.co",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,5 +21,8 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
